[package]
name = "Cappy3ds"
version = "0.1.0"
edition = "2021"

#build = "build.rs"

#[build-dependencies]
#cbindgen = "0.1.29"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rusb = "0.9"
rust-embed = "8.0.0"
bytes = "1.5.0"
nom = "7.1.3"
memchr = "2.6.3"
image = "0.24.7"

winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
raw-window-handle = "0.5.2"
futures = "0.3.28"

[lib]
name = "cappy3ds"
crate-type = ["staticlib", "cdylib"]
