[package]
name = "cappy3ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rusb = "0.9"
rust-embed = "8.0.0"
bytes = "1.5.0"
memchr = "2.6.3"
image = "0.24.7"
libusb1-sys = "0.6.4"
libc = "0.2.148"
itertools = "0.11.0"

