[package]
name = "cappy3ds_render"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
cbindgen = "0.1.29"
csbindgen = "1.8.0"

[dependencies]
bytemuck = { version = "1.14", features = [ "derive" ] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
raw-window-handle = "0.5.2"
image = "0.24.7"
futures = "0.3.28"
cpal = "0.15.2"
cappy3ds = { path = "../cappy3ds" }
ringbuf = "0.3.3"
simple-error = "0.3.0"
bytes = "1.5.0"
glam = "0.24.2"

[lib]
name = "cappy3ds_render"
crate-type = ["staticlib", "cdylib", "lib"]
